--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-modal": "^3.16.1",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
@@ -48,6 +50,7 @@
   },
   "devDependencies": {
     "@types/mui-image": "^1.0.1",
+    "@types/react-modal": "^3.13.1",
     "@types/react-swipeable-views-utils": "^0.13.4"
   }
 }
